# cadime-esp32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  nvs_util.c  nvs_util.h  receiver_main.c  receiver_main.h
receiver/: README.md  partitions.csv
receiver/main/: CMakeLists.txt  msg_struct.h
switch_driver/include/: switch_driver.h
switch_driver/src/: switch_driver.c
tag/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
tag/main/: CMakeLists.txt  common.h  gps_parser.cpp  gps_parser.h  gps_tag_main.c.jylee  gps_tag_main.cpp  gps_task.cpp  gps_task.h  idf_component.yml  led_task.cpp  led_task.h  msg_struct.h  nvs_util.c  nvs_util.h  rpi_comm_task.cpp  rpi_comm_task.h  sound.c  sound.h  zigbee.h
tag/switch_driver/: CMakeLists.txt
tag/switch_driver/src/: switch_driver.c
